--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.main.web-environment=false
 spring.main.banner-mode=off
 logging.level.=ERROR
+#logging.level.=DEBUG
+
+stapi.character.search.endpoint=http://stapi.co/api/v1/rest/character/search?pageNumber={pageNumber}
