Implement StapiClient.getCharacterByUid()

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.main.banner-mode=off
 logging.level.=ERROR
 #logging.level.=DEBUG
 
-stapi.character.search.endpoint=http://stapi.co/api/v1/rest/character/search?pageNumber={pageNumber}
+stapi.base.endpoint=http://stapi.co/api/v1/rest
+stapi.character.search.endpoint=${stapi.base.endpoint}/character/search?pageNumber={pageNumber}
+stapi.character.endpoint=${stapi.base.endpoint}/character?uid={uid}
