--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ logging.level.=ERROR
 stapi.base.endpoint=http://stapi.co/api/v1/rest
 stapi.character.search.endpoint=${stapi.base.endpoint}/character/search?pageNumber={pageNumber}
 stapi.character.endpoint=${stapi.base.endpoint}/character?uid={uid}
+stapi.connect.timeout.seconds=1
+stapi.read.timeout.seconds=1
