--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,26 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- now make the jar chmod +x style executable -->
+			<plugin>
+				<groupId>org.skife.maven</groupId>
+				<artifactId>really-executable-jar-maven-plugin</artifactId>
+				<version>1.5.0</version>
+				<configuration>
+					<flags>-Xmx1G</flags>
+					<programFile>startrekproject-executable</programFile>
+				</configuration>
+
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>really-executable-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
