Implement PlqadMapClient.getEnglishToPlqadMapping()

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ stapi.character.search.endpoint=${stapi.base.endpoint}/character/search?pageNumb
 stapi.character.endpoint=${stapi.base.endpoint}/character?uid={uid}
 stapi.connect.timeout.seconds=1
 stapi.read.timeout.seconds=1
+
+klingon.englishToPlqadMapping.file.name=EnglishToPlqadMapping.json
